Fix for breaking changes part 6